--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="sundarvel.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG_20250325_171301.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>SUNDHARAVELU M </h1>
             <p>Bsc computer science</p>
         </div>
