--- a/index.html
+++ b/index.html
@@ -147,10 +147,7 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">E Cart website</a></li>
-                <li><a href="#">Cloud Security IBM</a></li>
-                <li><a href="#">IBM chatbot</a></li>
-                <li><a href="#">College Portal</a></li> 
+                <li><a href="#">Personal Portfolio</a></li> 
                 <!-- Add more project links here -->
             </ul>
         </div>
